# rules_java

./: MODULE.bazel  module_rules.bzl
toolchain/: BUILD.bazel  toolchains.bzl
toolchain/jdk/: BUILD
toolchains/: local_java_repository.bzl
